// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Connected/EditorModal with no selected item 1`] = `
<ItemEditor store={{}} selected={null} onCloseModal={"function"} onNameChange={"function"} onDescriptionChange={"function"} onCategoryChange={"function"} onDateChange={"function"} onArchive={"function"} onDelete={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Fragment />
</ItemEditor>
`;

exports[`Storyshots Connected/EditorModal with selected archived item 1`] = `
<ItemEditor store={{}} selected={{"id":"test-id-5","name":"Create a thing","category":"create","description":"dadasdasd.","created":1000,"due":1000,"archived":true,"archivedDate":2000000,"status":"done"}} onCloseModal={"function"} onNameChange={"function"} onDescriptionChange={"function"} onCategoryChange={"function"} onDateChange={"function"} onArchive={"function"} onDelete={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Fragment>
    <Modal size={"lg"} open={true} toggle={"function"} fade={true} backdrop={true} role={"dialog"}>
      <Fragment>
        <Transition timeout={150} in={true} appear={true} mountOnEnter={true} unmountOnExit={true} onEntered={"function"} onExit={"function"} onExited={"function"} enter={true} exit={true} onEnter={"function"} onEntering={"function"} onExiting={"function"} />
        <Transition timeout={150} in={true} appear={true} mountOnEnter={true} unmountOnExit={true} onClick={"function"} onEntered={"function"} onExit={"function"} enter={true} exit={true} onEnter={"function"} onEntering={"function"} onExiting={"function"} onExited={"function"} />
      </Fragment>
    </Modal>
  </Fragment>
</ItemEditor>
`;

exports[`Storyshots Connected/EditorModal with selected item 1`] = `
<ItemEditor store={{}} selected={{"id":"test-id-1","name":"Today do things","category":"thing","description":"Nunc quis nisl ac justo elementum sagittis in quis justo.","created":10000000,"due":10000000000000,"archived":false,"archivedDate":null,"status":"done"}} onCloseModal={"function"} onNameChange={"function"} onDescriptionChange={"function"} onCategoryChange={"function"} onDateChange={"function"} onArchive={"function"} onDelete={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Fragment>
    <Modal size={"lg"} open={true} toggle={"function"} fade={true} backdrop={true} role={"dialog"}>
      <Fragment>
        <Transition timeout={150} in={true} appear={true} mountOnEnter={true} unmountOnExit={true} onEntered={"function"} onExit={"function"} onExited={"function"} enter={true} exit={true} onEnter={"function"} onEntering={"function"} onExiting={"function"} />
        <Transition timeout={150} in={true} appear={true} mountOnEnter={true} unmountOnExit={true} onClick={"function"} onEntered={"function"} onExit={"function"} enter={true} exit={true} onEnter={"function"} onEntering={"function"} onExiting={"function"} onExited={"function"} />
      </Fragment>
    </Modal>
  </Fragment>
</ItemEditor>
`;
